--- a/src/components/cart-dropdown/cart-dropdown.styles.sass
+++ b/src/components/cart-dropdown/cart-dropdown.styles.sass
@@ -11,11 +11,15 @@
     right: 40px
     z-index: 5
 
-.cart-items
-    height: 240px
-    display: flex
-    flex-direction: column
-    overflow: scroll
+    .empty-message
+        font-size: 18px
+        margin: 50px auto
 
-button
-    margin-top: auto
+    .cart-items
+        height: 240px
+        display: flex
+        flex-direction: column
+        overflow: scroll
+
+    button
+        margin-top: auto
